--- a/Back/code/src/utils/lib/active.hbs
+++ b/Back/code/src/utils/lib/active.hbs
@@ -5,9 +5,8 @@
 
 <body>
     <div>
-        <h1>Activa tu cuenta</h1>
-        <p>Gracias por confiar en nosotros.
-            Pulse en el siguiente enlace para activar tu cuenta.
+        <h1>{{title}}</h1>
+        <p>{{message}}
         </p>
         <button style="color: #e84393"><a href="{{url}}">Activa tu cuenta</a></button>
     </div>
