FEAT: add all mails translations and messages

--- a/Back/code/src/views/emails/blocked.hbs
+++ b/Back/code/src/views/emails/blocked.hbs
@@ -1,17 +1,16 @@
 <html>
 
-<head>
-    <title>Block account email</title>
-</head>
+  <head>
+    <title>{{title}}</title>
+  </head>
 
-<body>
+  <body>
     <div>
-        <h1>Desbloqueo de tu cuenta</h1>
-        <p>Hola, tu cuenta ha sido bloqueda por haber superado el máximo de intentos en ingresar tu
-            contraseña. Pulse en el siguiente enlace para desbloquearla.
-        </p>
-        <button style="color: #e84393"><a href="{{url}}">Desbloquea tu cuenta</a></button>
+      <h1>{{title}}</h1>
+      <p>{{message}}
+      </p>
+      <button style='color: #e84393'><a href='{{url}}'>{{buttonText}}</a></button>
     </div>
-</body>
+  </body>
 
 </html>
