--- a/Back/code/src/views/emails/recoverPassword.hbs
+++ b/Back/code/src/views/emails/recoverPassword.hbs
@@ -1,14 +1,14 @@
 
 <head>
-    <title>Recovery password email</title>
+    <title>{{title}}</title>
 </head>
 
 <body>
     <div>
-        <h1>Recupera tu contraseña</h1>
-        <p>Pulse en el siguiente enlace para recuperar tu contraseña.
+        <h1>{{title}}</h1>
+        <p>{{message}}
         </p>
-        <button style="color: #e84393"><a href="{{url}}">Recupera tu contraseña</a></button>
+        <button style="color: #e84393"><a href="{{url}}">{{buttonText}}</a></button>
     </div>
 </body>
 
